# portfolio-website

./: .gitignore  README.md  backend_microservice_structure_roadmap.md  docker-compose.yaml
backend/: .dockerignore  .env.template  DOCKER_BUILD_TROUBLESHOOTING.md  Dockerfile  TODO.md  backend.env.example  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
backend/apps/: config.py
backend/apps/core/: logger.py
backend/apps/database/: neon.py
backend/apps/database/migrations/: 0001_create_horoscope_email_subscription_schema.sql
backend/apps/integrations/: resend.py
backend/apps/monitoring/: metrics_collector.py  middleware.py  prometheus.py  telemetry.py
backend/apps/services/horoscope/: router.py  (+2 more)
backend/apps/workers/: horoscope_email.py
backend/services/history/: Dockerfile  config.py  main.py  requirements.txt  router.py  schemas.py
backend/services/weather_report/: .dockerignore  main.py  mcp.py  router.py  service.py
backend/shared/: config.py  logger.py
backend/tests/: conftest.py  test_config_and_logging.py  test_main.py  test_neon_database.py  test_validators.py
backend/tests/monitoring/: test_metrics.py  test_middleware.py  test_telemetry.py
backend/tests/services/: test_horoscope.py  test_horoscope_subscriptions_delivery.py  test_horoscope_subscriptions_email_templates.py  test_horoscope_subscriptions_repository.py  test_horoscope_subscriptions_router.py  test_horoscope_subscriptions_schemas.py  test_horoscope_subscriptions_service.py  test_horoscope_subscriptions_tokens.py  test_horoscope_subscriptions_webhooks.py  test_resend_integration.py  test_url_shortener.py  test_worker_horoscope_email.py
(+86 files in other folders)
